# teleport

./: .backportrc.json  .bash_history  .bazelignore  .bazelrc  .custom-gcl.yml  .drone.yml  .env  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .golangci-custom-plugins.yml  .golangci.yml  .lefthook.yaml  .npmrc  .oxfmtrc.json  .oxlintrc.json  .oxlintrc.jsonc  .pnpmfile.cjs  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.js  .tflint.hcl  .trivyignore  .vale.ini  1  15.4.16.txt  15.4.4.txt  AGENTS.md  BUILD.bazel  BUILD_macos.md  CHANGELOG.md  CLA.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile-build  (+109 more)
ai-service/: .gitignore  Makefile  messages.json  pyproject.toml
ai-service/ai_service/: __init__.py  agent.py  app.py  chain.py  console.py  data.py  model.py  train.py
api/: BUILD.bazel  LICENSE  README.md  api.go  client.go  config.go  constants.go  defaults.go  go.mod  go.sum  grpc.go  import_compute.go  semversion.go  semversion_test.go  types.go  version.go
api/accessrequest/: BUILD.bazel  access_request.go  access_request_test.go
api/breaker/: BUILD.bazel  breaker.go  breaker_test.go  doc.go  interceptors.go  ratio.go  round_tripper.go  round_tripper_test.go
api/client/: BUILD.bazel  README.md  alpn.go  alpn_conn_upgrade.go  alpn_conn_upgrade_test.go  alpn_test.go  alpn_websocket.go  apln_websocket_test.go  auditstreamer.go  check_connectors.go  client.go  client_subca_test.go  client_test.go  config.go  conn_upgrade.go  conn_upgrade_test.go  contextdialer.go  cookie.gen.go  credentials.go  credentials_test.go  doc.go  doc_test.go  dustin.go  dynamic_credentials.go  emit_audit_events_test.go  errors.go  events.go  events_generated.gen.go  events_test.go  hardwarekeyservice.go  identity.go  identityfile.go  identityfile_test.go  inventory.go  inventory_test.go  joinservice.go  joinservice_test.go  keepaliver.go  mfa.go  mfa_test.go  (+15 more)
api/clientplus/: client.go
api/constants/: BUILD.bazel  constants.go
api/context/: go121_context_compat.go
api/cryptopatch/: crypto.go  crypto_test.go
api/defaults/: BUILD.bazel  defaults.go  defaults_test.go
api/docs/: client.md  types.md  wrappers.md
api/fixtures/: BUILD.bazel  fixtures.go
api/identity/: identityfile.go  identityfile_test.go
api/identityfile/: BUILD.bazel  identityfile.go  identityfile_test.go
api/internal/: doc.go
api/internalutils/: BUILD.bazel  doc.go
api/metadata/: BUILD.bazel  metadata.go
api/mfa/: BUILD.bazel  ceremony.go  ceremony_test.go  devices.go  mfa.go  mfa_test.go  prompt.go  session_bound_ceremony.go  session_bound_ceremony_test.go
api/profile/: BUILD.bazel  profile.go  profile_test.go
api/proto/: README.md  buf-legacy.yaml  buf.yaml  proto.go
api/sessionrecording/: gzip_reader.go  session_recording.go  session_recording_test.go  sessionlog.go  stream.go
api/ssh/: client.go  client_test.go  ssh.go  ssh_test.go
api/sshutils/: chconn.go  conn.go
api/testhelpers/: BUILD.bazel  proxy.go
api/trail/: BUILD.bazel  trail.go  trail_test.go
api/types/: BUILD.bazel  access_list.go  access_list_test.go  access_monitoring_rule.go  access_policy.go  access_request.go  access_request_test.go  access_requests.pb.go  accountrecovery.go  app.go  app_http_protocol_priority.go  app_http_protocol_priority_test.go  app_test.go  appresources.go  appresources_test.go  appserver.go  appserver_or_saml_idp_sp.go  appserver_or_saml_idp_sp_test.go  appserver_test.go  assertion_info.go  assertion_info_test.go  assertion_info_wrapper.go  assertion_info_wrapper_test.go  audit.go  authentication.go  authentication_authpreference_test.go  authentication_mfadevice_test.go  authentication_test.go  authority.go  authority_test.go  autodiscover.go  autoupdate_config.go  autoupdate_version.go  cert_authority_override.go  cert_authority_override_test.go  clone_test.go  cluster_alert.go  cluster_alert_test.go  clusterconfig.go  clusterconfig_override.go  (+196 more)
api/utils/: BUILD.bazel  addr.go  addr_test.go  bool.go  cache.go  cache_test.go  cluster.go  conv.go  conv_test.go  delegator.go  jitter.go  json.go  keys.go  protobuf.go  protobuf_test.go  proxy.go  proxy_test.go  regexp.go  replace.go  route.go  route_test.go  signer.go  slices.go  slices_test.go  stream_consumer.go  stream_consumer_test.go  strings.go  strings_test.go  time.go  uri.go  uri_test.go  user.go  user_test.go  utils.go  utils_test.go  ver.go
api/versioncontrol/: target.go
api/workloadidentity/: trustdomains.go
assets/backport/: BUILD.bazel  go.mod  go.sum  main.go  main_test.go
build.assets/dump-preset-roles/: BUILD.bazel  main.go
e2e/aws/: BUILD.bazel  README.md  databases_test.go  doc.go  eks_test.go  fixtures.go  fixtures_test.go  main_test.go  rds_test.go  redshift_test.go
entitlements/: BUILD.bazel  entitlements.go  entitlements_test.go
examples/access-plugin-minimal/: BUILD.bazel  README.md  config.go  createrow.go  go.mod  go.sum  main.go  makerowdata.go  plugin.go  types.go  updaterow.go  updatespreadsheet.go  watcherjob.go
examples/api-sync-roles/: BUILD.bazel  README.md  go.mod  go.sum  main.go
examples/bench/: BUILD.bazel  README.md  example.go
examples/desktop-registration/: BUILD.bazel  README.md  go.mod  go.sum  main.go
examples/dynamoathenamigration/: BUILD.bazel  (+4 more)
integration/: BUILD.bazel  agent_forwarding_test.go  app_integration_test.go  buf_test.go  client_test.go  db_integration_test.go  ec2_test.go  helpers.go  hostuser_test.go  installer_test.go  instance_test.go  integration.go  integration_test.go  joinopenssh_test.go  joinversion_test.go  kube_integration_test.go  kubeconfig  main_test.go  port_forwarding_test.go  ports.go  proxy_helpers_test.go  proxy_peer_test.go  proxy_test.go  proxy_tunnel_strategy_test.go  readiness_test.go  restart_test.go  tbot_test.go  tctl_terraform_env_test.go  tctl_token_kube_test.go  teleport_update_sync_test.go  teleterm_test.go  terminal_test.go  time_sync_test.go  traits_propagation_test.go  trustedclusters.go  utmp_integration_test.go  version_test.go  web-e2e_test.go  webproxy_insecure_test.go
(+23437 files in other folders)
