[workspace]
resolver = "2"
members = ["lib/srv/desktop/rdp/pam-jwt", "lib/srv/desktop/rdp/rdpclient", "web/packages/shared/libs/ironrdp"]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-only"
homepage = "https://github.com/gravitational/teleport"
repository = "https://github.com/gravitational/teleport"
publish = false

[profile.dev]
debug = 1
lto = "off"

[profile.release]
debug = 1
codegen-units = 1
lto = "thin"

[workspace.dependencies]
# Note: To use a local IronRDP repository as a crate (for example, ironrdp-cliprdr), define the dependency as follows:
# ironrdp-cliprdr = { path = "/path/to/local/IronRDP/crates/ironrdp-cliprdr" }
ironrdp-cliprdr = { git = "https://github.com/Devolutions/IronRDP", rev = "149b0a6feedc7e6d510845bf0808d80a456229ce" }
ironrdp-connector = { git = "https://github.com/Devolutions/IronRDP", rev = "149b0a6feedc7e6d510845bf0808d80a456229ce" }
ironrdp-core = { git = "https://github.com/Devolutions/IronRDP", rev = "149b0a6feedc7e6d510845bf0808d80a456229ce" }
ironrdp-displaycontrol = { git = "https://github.com/Devolutions/IronRDP", rev = "149b0a6feedc7e6d510845bf0808d80a456229ce" }
ironrdp-dvc = { git = "https://github.com/Devolutions/IronRDP", rev = "149b0a6feedc7e6d510845bf0808d80a456229ce" }
ironrdp-graphics = { git = "https://github.com/Devolutions/IronRDP", rev = "149b0a6feedc7e6d510845bf0808d80a456229ce" }
ironrdp-pdu = { git = "https://github.com/Devolutions/IronRDP", rev = "149b0a6feedc7e6d510845bf0808d80a456229ce" }
ironrdp-rdpdr = { git = "https://github.com/Devolutions/IronRDP", rev = "149b0a6feedc7e6d510845bf0808d80a456229ce" }
ironrdp-rdpsnd = { git = "https://github.com/Devolutions/IronRDP", rev = "149b0a6feedc7e6d510845bf0808d80a456229ce" }
ironrdp-session = { git = "https://github.com/Devolutions/IronRDP", rev = "149b0a6feedc7e6d510845bf0808d80a456229ce" }
ironrdp-svc = { git = "https://github.com/Devolutions/IronRDP", rev = "149b0a6feedc7e6d510845bf0808d80a456229ce" }
ironrdp-tls = { git = "https://github.com/Devolutions/IronRDP", rev = "149b0a6feedc7e6d510845bf0808d80a456229ce", features = [
    "rustls",
] }
ironrdp-tokio = { git = "https://github.com/Devolutions/IronRDP", rev = "149b0a6feedc7e6d510845bf0808d80a456229ce" }
