[workspace]
resolver = "2"
members = ["lib/srv/desktop/rdp/pam-jwt", "lib/srv/desktop/rdp/rdpclient", "web/packages/shared/libs/ironrdp"]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-only"
homepage = "https://github.com/gravitational/teleport"
repository = "https://github.com/gravitational/teleport"
publish = false

[profile.dev]
debug = 1
lto = "off"

[profile.release]
debug = 1
codegen-units = 1
lto = "thin"

[workspace.dependencies]
# Note: To use a local IronRDP repository as a crate (for example, ironrdp-cliprdr), define the dependency as follows:
# ironrdp-cliprdr = { path = "/path/to/local/IronRDP/crates/ironrdp-cliprdr" }
ironrdp-cliprdr = { git = "https://github.com/Devolutions/IronRDP", rev = "b0e7aacb3a9910b69c5788c9104aee4482e6cd57" }
ironrdp-connector = { git = "https://github.com/Devolutions/IronRDP", rev = "b0e7aacb3a9910b69c5788c9104aee4482e6cd57" }
ironrdp-core = { git = "https://github.com/Devolutions/IronRDP", rev = "b0e7aacb3a9910b69c5788c9104aee4482e6cd57" }
ironrdp-displaycontrol = { git = "https://github.com/Devolutions/IronRDP", rev = "b0e7aacb3a9910b69c5788c9104aee4482e6cd57" }
ironrdp-dvc = { git = "https://github.com/Devolutions/IronRDP", rev = "b0e7aacb3a9910b69c5788c9104aee4482e6cd57" }
ironrdp-graphics = { git = "https://github.com/Devolutions/IronRDP", rev = "b0e7aacb3a9910b69c5788c9104aee4482e6cd57" }
ironrdp-pdu = { git = "https://github.com/Devolutions/IronRDP", rev = "b0e7aacb3a9910b69c5788c9104aee4482e6cd57" }
ironrdp-rdpdr = { git = "https://github.com/Devolutions/IronRDP", rev = "b0e7aacb3a9910b69c5788c9104aee4482e6cd57" }
ironrdp-rdpsnd = { git = "https://github.com/Devolutions/IronRDP", rev = "b0e7aacb3a9910b69c5788c9104aee4482e6cd57" }
ironrdp-session = { git = "https://github.com/Devolutions/IronRDP", rev = "b0e7aacb3a9910b69c5788c9104aee4482e6cd57" }
ironrdp-svc = { git = "https://github.com/Devolutions/IronRDP", rev = "b0e7aacb3a9910b69c5788c9104aee4482e6cd57" }
ironrdp-tls = { git = "https://github.com/Devolutions/IronRDP", rev = "b0e7aacb3a9910b69c5788c9104aee4482e6cd57", features = [
    "rustls",
] }
ironrdp-tokio = { git = "https://github.com/Devolutions/IronRDP", rev = "b0e7aacb3a9910b69c5788c9104aee4482e6cd57" }
