[workspace]
resolver = "2"
members = ["lib/srv/desktop/rdp/rdpclient", "lib/srv/desktop/rdp/decoder", "web/packages/shared/libs/ironrdp"]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-only"
homepage = "https://github.com/gravitational/teleport"
repository = "https://github.com/gravitational/teleport"
publish = false

[profile.dev]
debug = 1
lto = "off"

[profile.release]
debug = 1
codegen-units = 1
lto = "thin"

[workspace.dependencies]
# Note: To use a local IronRDP repository as a crate (for example, ironrdp-cliprdr), define the dependency as follows:
# ironrdp-cliprdr = { path = "/path/to/local/IronRDP/crates/ironrdp-cliprdr" }
ironrdp-cliprdr = "0.7"
ironrdp-connector = "0.10"
ironrdp-core = "0.2"
ironrdp-displaycontrol = "0.8"
ironrdp-dvc = "0.8"
ironrdp-graphics = "0.9"
ironrdp-pdu = "0.9"
ironrdp-rdpdr = "0.7"
ironrdp-rdpsnd = "0.9"
ironrdp-session = "0.11"
ironrdp-svc = "0.8"
ironrdp-tls = { version = "0.2", features = ["rustls"] }
ironrdp-tokio = "0.10"
ironrdp-egfx = "0.3.0"
