module(
    name = "teleport",
    version = "0.0.0",
    compatibility_level = 0,
)



bazel_dep(name = "rules_go", version = "0.55.1", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.44.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "protobuf", version = "31.1", repo_name = "com_google_protobuf")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.5")
# go_sdk.nogo(nogo = "//:nogo")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_connectrpc_connect",
"com_github_stretchr_testify",
"com_github_alecthomas_kingpin_v2",
"com_github_alicebob_miniredis_v2",
"com_github_andybalholm_brotli",
"com_github_aquasecurity_libbpfgo",
"io_opentelemetry_go_otel_metric",
"com_github_armon_go_radix",
"com_github_aws_aws_sdk_go_v2",
"com_github_aws_aws_sdk_go_v2_config",
"com_github_aws_aws_sdk_go_v2_credentials",
"com_github_aws_aws_sdk_go_v2_feature_dynamodb_attributevalue",
"com_github_aws_aws_sdk_go_v2_feature_dynamodbstreams_attributevalue",
"com_github_aws_aws_sdk_go_v2_feature_ec2_imds",
"com_github_aws_aws_sdk_go_v2_feature_rds_auth",
"com_github_aws_aws_sdk_go_v2_feature_s3_manager",
"com_github_aws_aws_sdk_go_v2_service_applicationautoscaling",
"com_github_aws_aws_sdk_go_v2_service_athena",
"com_github_aws_aws_sdk_go_v2_service_dax",
"com_github_aws_aws_sdk_go_v2_service_dynamodb",
"com_github_aws_aws_sdk_go_v2_service_dynamodbstreams",
"com_github_aws_aws_sdk_go_v2_service_ec2",
"com_github_aws_aws_sdk_go_v2_service_ec2instanceconnect",
"com_github_aws_aws_sdk_go_v2_service_ecs",
"com_github_aws_aws_sdk_go_v2_service_eks",
"com_github_aws_aws_sdk_go_v2_service_elasticache",
"com_github_aws_aws_sdk_go_v2_service_glue",
"com_github_aws_aws_sdk_go_v2_service_iam",
"com_github_aws_aws_sdk_go_v2_service_identitystore",
"com_github_aws_aws_sdk_go_v2_service_kms",
"com_github_aws_aws_sdk_go_v2_service_lambda",
"com_github_aws_aws_sdk_go_v2_service_memorydb",
"com_github_aws_aws_sdk_go_v2_service_opensearch",
"com_github_aws_aws_sdk_go_v2_service_organizations",
"com_github_aws_aws_sdk_go_v2_service_rds",
"com_github_aws_aws_sdk_go_v2_service_redshift",
"com_github_aws_aws_sdk_go_v2_service_redshiftserverless",
"com_github_aws_aws_sdk_go_v2_service_rolesanywhere",
"com_github_aws_aws_sdk_go_v2_service_s3",
"com_github_aws_aws_sdk_go_v2_service_secretsmanager",
"com_github_aws_aws_sdk_go_v2_service_sns",
"com_github_aws_aws_sdk_go_v2_service_sqs",
"com_github_aws_aws_sdk_go_v2_service_ssm",
"com_github_aws_aws_sdk_go_v2_service_ssoadmin",
"com_github_aws_aws_sdk_go_v2_service_sts",
"com_github_aws_aws_sigv4_auth_cassandra_gocql_driver_plugin",
"com_github_aws_smithy_go",
"com_github_aws_smithy_go_tracing_smithyoteltracing",
"com_github_awslabs_amazon_ecr_credential_helper_ecr_login",
"com_github_azure_azure_sdk_for_go_sdk_azcore",
"com_github_azure_azure_sdk_for_go_sdk_azidentity",
"com_github_azure_azure_sdk_for_go_sdk_resourcemanager_authorization_armauthorization_v2",
"com_github_azure_azure_sdk_for_go_sdk_resourcemanager_compute_armcompute_v6",
"com_github_azure_azure_sdk_for_go_sdk_resourcemanager_containerservice_armcontainerservice_v6",
"com_github_azure_azure_sdk_for_go_sdk_resourcemanager_msi_armmsi",
"com_github_azure_azure_sdk_for_go_sdk_resourcemanager_mysql_armmysql",
"com_github_azure_azure_sdk_for_go_sdk_resourcemanager_mysql_armmysqlflexibleservers",
"com_github_azure_azure_sdk_for_go_sdk_resourcemanager_postgresql_armpostgresql",
"com_github_azure_azure_sdk_for_go_sdk_resourcemanager_postgresql_armpostgresqlflexibleservers",
"com_github_azure_azure_sdk_for_go_sdk_resourcemanager_redis_armredis_v3",
"com_github_azure_azure_sdk_for_go_sdk_resourcemanager_redisenterprise_armredisenterprise",
"com_github_azure_azure_sdk_for_go_sdk_resourcemanager_sql_armsql",
"com_github_azure_azure_sdk_for_go_sdk_resourcemanager_subscription_armsubscription",
"com_github_azure_azure_sdk_for_go_sdk_storage_azblob",
"com_github_azure_go_ansiterm",
"com_github_beevik_etree",
"com_github_buildkite_bintest_v3",
"com_github_charlievieth_strcase",
"com_github_charmbracelet_bubbles",
"com_github_charmbracelet_bubbletea",
"com_github_charmbracelet_huh",
"com_github_charmbracelet_lipgloss",
"com_github_clickhouse_ch_go",
"com_github_clickhouse_clickhouse_go_v2",
"com_github_coreos_go_semver",
"com_github_coreos_go_systemd_v22",
"com_github_creack_pty",
"com_github_crewjam_saml",
"com_github_danieltitkov_go_adaptive_cards",
"com_github_datastax_go_cassandra_native_protocol",
"com_github_digitorus_pkcs7",
"com_github_distribution_reference",
"com_github_docker_cli",
"com_github_docker_docker",
"com_github_dustin_go_humanize",
"com_github_elimity_com_scim",
"com_github_envoyproxy_go_control_plane_envoy",
"com_github_evanphx_json_patch",
"com_github_fatih_color",
"com_github_fsnotify_fsnotify",
"com_github_fsouza_fake_gcs_server",
"com_github_fxamacker_cbor_v2",
"com_github_ghodss_yaml",
"com_github_go_git_go_git_v5",
"com_github_go_jose_go_jose_v3",
"com_github_go_jose_go_jose_v4",
"com_github_go_ldap_ldap_v3",
"com_github_go_logr_logr",
"com_github_go_mysql_org_go_mysql",
"com_github_go_piv_piv_go_v2",
"com_github_go_resty_resty_v2",
"com_github_go_webauthn_webauthn",
"com_github_gobwas_ws",
"com_github_gocql_gocql",
"com_github_gofrs_flock",
"com_github_gogo_protobuf",
"com_github_golang_jwt_jwt_v4",
"com_github_golang_jwt_jwt_v5",
"com_github_google_btree",
"com_github_google_go_attestation",
"com_github_google_go_cmp",
"com_github_google_go_containerregistry",
"com_github_google_go_github_v70",
"com_github_google_go_querystring",
"com_github_google_go_tpm",
"com_github_google_go_tpm_tools",
"com_github_google_renameio_v2",
"com_github_google_safetext",
"com_github_google_shlex",
"com_github_google_uuid",
"com_github_googleapis_gax_go_v2",
"com_github_gorilla_websocket",
"com_github_grafana_pyroscope_go",
"com_github_gravitational_license",
"com_github_gravitational_roundtrip",
"com_github_gravitational_teleport_api",
"com_github_gravitational_trace",
"com_github_grpc_ecosystem_go_grpc_middleware_providers_prometheus",
"com_github_grpc_ecosystem_go_grpc_middleware_v2",
"com_github_guptarohit_asciigraph",
"com_github_hashicorp_golang_lru_v2",
"com_github_hdrhistogram_hdrhistogram_go",
"com_github_icza_mjpeg",
"com_github_jackc_pgconn",
"com_github_jackc_pgerrcode",
"com_github_jackc_pgproto3_v2",
"com_github_jackc_pgtype",
"com_github_jackc_pgx_v4",
"com_github_jackc_pgx_v5",
"com_github_jcmturner_gokrb5_v8",
"com_github_johannesboyne_gofakes3",
"com_github_jonboulle_clockwork",
"com_github_joshlf_go_acl",
"com_github_json_iterator_go",
"com_github_julienschmidt_httprouter",
"com_github_keys_pub_go_libfido2",
"com_github_lib_pq",
"com_github_mailgun_mailgun_go_v4",
"com_github_mark3labs_mcp_go",
"com_github_masterminds_sprig_v3",
"com_github_mattn_go_shellwords",
"com_github_mattn_go_sqlite3",
"com_github_mdlayher_netlink",
"com_github_microsoft_go_mssqldb",
"com_github_microsoft_go_winio",
"com_github_miekg_pkcs11",
"com_github_mitchellh_mapstructure",
"com_github_moby_term",
"com_github_okta_okta_sdk_golang_v2",
"com_github_opencontainers_go_digest",
"com_github_opencontainers_selinux",
"com_github_opensearch_project_opensearch_go_v2",
"com_github_oracle_oci_go_sdk_v65",
"com_github_parquet_go_parquet_go",
"com_github_patrickmn_go_cache",
"com_github_pavlo_v_chernykh_keystore_go_v4",
"com_github_pelletier_go_toml",
"com_github_pkg_sftp",
"com_github_pquerna_otp",
"com_github_prometheus_client_golang",
"com_github_prometheus_client_model",
"com_github_prometheus_common",
"com_github_quic_go_quic_go",
"com_github_redis_go_redis_v9",
"com_github_russellhaering_gosaml2",
"com_github_russellhaering_goxmldsig",
"com_github_schollz_progressbar_v3",
"com_github_scim2_filter_parser_v2",
"com_github_shirou_gopsutil_v4",
"com_github_sigstore_cosign_v2",
"com_github_sigstore_protobuf_specs",
"com_github_sigstore_sigstore",
"com_github_sigstore_sigstore_go",
"com_github_sijms_go_ora_v2",
"com_github_snowflakedb_gosnowflake",
"com_github_spf13_cobra",
"com_github_spiffe_aws_spiffe_workload_helper",
"com_github_spiffe_go_spiffe_v2",
"com_github_thalesignite_crypto11",
"com_github_tidwall_pretty",
"com_github_tidwall_sjson",
"com_github_ucarion_urlpath",
"com_github_vulcand_predicate",
"com_github_yusufpapurcu_wmi",
"com_github_zitadel_oidc_v3",
"com_gitlab_gitlab_org_api_client_go",
"com_google_cloud_go_cloudsqlconn",
"com_google_cloud_go_compute",
"com_google_cloud_go_compute_metadata",
"com_google_cloud_go_container",
"com_google_cloud_go_firestore",
"com_google_cloud_go_iam",
"com_google_cloud_go_kms",
"com_google_cloud_go_resourcemanager",
"com_google_cloud_go_spanner",
"com_google_cloud_go_storage",
"com_sslmate_software_src_go_pkcs12",
"com_zx2c4_golang_wireguard",
"com_zx2c4_golang_wireguard_windows",
"dev_dny_code_ssrf",
"dev_gvisor_gvisor",
"in_gopkg_check_v1",
"in_gopkg_dnaeon_go_vcr_v3",
"in_gopkg_ini_v1",
"in_gopkg_mail_v2",
"in_gopkg_yaml_v2",
"in_gopkg_yaml_v3",
"io_etcd_go_etcd_api_v3",
"io_etcd_go_etcd_client_v3",
"io_filippo_age",
"io_k8s_api",
"io_k8s_apiextensions_apiserver",
"io_k8s_apimachinery",
"io_k8s_apiserver",
"io_k8s_cli_runtime",
"io_k8s_client_go",
"io_k8s_component_base",
"io_k8s_klog_v2",
"io_k8s_kubectl",
"io_k8s_sigs_controller_runtime",
"io_k8s_sigs_controller_tools",
"io_k8s_sigs_yaml",
"io_k8s_utils",
"io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc",
"io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp",
"io_opentelemetry_go_otel",
"io_opentelemetry_go_otel_exporters_otlp_otlptrace",
"io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc",
"io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracehttp",
"io_opentelemetry_go_otel_sdk",
"io_opentelemetry_go_otel_trace",
"io_opentelemetry_go_proto_otlp",
"org_golang_google_api",
"org_golang_google_genproto_googleapis_rpc",
"org_golang_google_grpc",
"org_golang_google_grpc_cmd_protoc_gen_go_grpc",
"org_golang_google_protobuf",
"org_golang_x_crypto",
"org_golang_x_exp",
"org_golang_x_mod",
"org_golang_x_net",
"org_golang_x_oauth2",
"org_golang_x_sync",
"org_golang_x_sys",
"org_golang_x_term",
"org_golang_x_text",
"org_golang_x_time",
"org_mongodb_go_mongo_driver",
"sh_helm_helm_v3"
)