[tool.poetry]
name = "ai-service"
version = "0.1.0"
description = ""
authors = ["Joel Wejdenstål <jwejdenstal@icloud.com>"]
readme = "README.md"
packages = [{include = "ai_service"}]

[tool.poetry.scripts]
start = "ai_service:run"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.4"
langchain = "^0.0.137"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
