load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "integration",
    srcs = [
        "integration.go",
        "ports.go",
    ],
    importpath = "github.com/gravitational/teleport/integration",
    visibility = ["//visibility:public"],
    deps = [
        "//integration/helpers",
        "//lib/utils",
    ],
)

go_test(
    name = "integration_test",
    srcs = [
        "client_test.go",
        "ec2_test.go",
        "hostuser_test.go",
        "instance_test.go",
        "integration_test.go",
        "joinopenssh_test.go",
        "kube_integration_test.go",
        "main_test.go",
        "port_forwarding_test.go",
        "tctl_terraform_env_test.go",
        "teleterm_test.go",
        "terminal_test.go",
        "time_sync_test.go",
        "utmp_integration_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":integration"],
    deps = [
        "//:teleport",
        "//api/breaker",
        "//api/client",
        "//api/client/proto",
        "//api/client/webclient",
        "//api/constants",
        "//api/defaults",
        "//api/metadata",
        "//api/observability/tracing/ssh",
        "//api/profile",
        "//api/testhelpers",
        "//api/trail",
        "//api/types",
        "//api/types/events",
        "//api/utils",
        "//api/utils/keys",
        "//api/utils/prompt",
        "//api/utils/retryutils",
        "//entitlements",
        "//gen/proto/go/teleport/lib/teleterm/v1:teleterm",
        "//integration/db",
        "//integration/helpers",
        "//integration/kube",
        "//lib",
        "//lib/auth",
        "//lib/auth/authclient",
        "//lib/auth/mocku2f",
        "//lib/auth/testauthority",
        "//lib/auth/webauthncli",
        "//lib/auth/webauthntypes",
        "//lib/authz",
        "//lib/backend",
        "//lib/backend/lite",
        "//lib/bpf",
        "//lib/client",
        "//lib/cloud/imds",
        "//lib/cloud/imds/aws",
        "//lib/config",
        "//lib/cryptosuites",
        "//lib/defaults",
        "//lib/events",
        "//lib/events/eventstest",
        "//lib/events/filesessions",
        "//lib/kube/utils",
        "//lib/labels",
        "//lib/modules",
        "//lib/modules/modulestest",
        "//lib/multiplexer",
        "//lib/openssh",
        "//lib/pam",
        "//lib/reversetunnel",
        "//lib/reversetunnelclient",
        "//lib/service",
        "//lib/service/servicecfg",
        "//lib/services",
        "//lib/session",
        "//lib/srv",
        "//lib/srv/alpnproxy/common",
        "//lib/srv/regular",
        "//lib/srv/uacc",
        "//lib/sshutils",
        "//lib/sshutils/sftp",
        "//lib/sshutils/x11",
        "//lib/teleterm/api/uri",
        "//lib/teleterm/apiserver/handler",
        "//lib/teleterm/clusteridcache",
        "//lib/teleterm/clusters",
        "//lib/teleterm/daemon",
        "//lib/tlsca",
        "//lib/utils",
        "//lib/utils/aws/stsutils",
        "//lib/utils/log/logtest",
        "//lib/utils/testutils",
        "//lib/web",
        "//lib/web/terminal",
        "//tool/tctl/common",
        "//tool/teleport/testenv",
        "@com_github_alecthomas_kingpin_v2//:kingpin",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_feature_ec2_imds//:imds",
        "@com_github_aws_aws_sdk_go_v2_service_sts//:sts",
        "@com_github_gogo_protobuf//proto",
        "@com_github_google_uuid//:uuid",
        "@com_github_gorilla_websocket//:websocket",
        "@com_github_gravitational_trace//:trace",
        "@com_github_jonboulle_clockwork//:clockwork",
        "@com_github_pkg_sftp//:sftp",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@io_k8s_api//core/v1:core",
        "@io_k8s_apimachinery//pkg/api/errors",
        "@io_k8s_apimachinery//pkg/apis/meta/v1:meta",
        "@io_k8s_apimachinery//pkg/fields",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/runtime/schema",
        "@io_k8s_apimachinery//pkg/types",
        "@io_k8s_apimachinery//pkg/util/httpstream/spdy",
        "@io_k8s_apimachinery//pkg/util/strategicpatch",
        "@io_k8s_apimachinery//pkg/watch",
        "@io_k8s_client_go//kubernetes",
        "@io_k8s_client_go//kubernetes/typed/core/v1:core",
        "@io_k8s_client_go//rest",
        "@io_k8s_client_go//tools/cache",
        "@io_k8s_client_go//tools/portforward",
        "@io_k8s_client_go//tools/remotecommand",
        "@io_k8s_client_go//tools/watch",
        "@io_k8s_client_go//transport",
        "@io_k8s_client_go//transport/spdy",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//connectivity",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_x_crypto//ssh",
        "@org_golang_x_crypto//ssh/agent",
        "@org_golang_x_net//http2",
        "@org_golang_x_sync//errgroup",
    ] + select({
        "@io_bazel_rules_go//go/platform:android": [
            "//api/gen/proto/go/teleport/decision/v1alpha1",
            "//api/gen/proto/go/teleport/label/v1:label",
            "//api/gen/proto/go/teleport/userprovisioning/v2:userprovisioning",
            "//api/types/userprovisioning",
            "//lib/services/local",
            "//lib/utils/host",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//api/gen/proto/go/teleport/decision/v1alpha1",
            "//api/gen/proto/go/teleport/label/v1:label",
            "//api/gen/proto/go/teleport/userprovisioning/v2:userprovisioning",
            "//api/types/userprovisioning",
            "//lib/services/local",
            "//lib/utils/host",
        ],
        "//conditions:default": [],
    }),
)
