load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "client",
    srcs = [
        "alpn.go",
        "alpn_conn_upgrade.go",
        "alpn_websocket.go",
        "auditstreamer.go",
        "client.go",
        "contextdialer.go",
        "credentials.go",
        "doc.go",
        "errors.go",
        "events.go",
        "inventory.go",
        "joinservice.go",
        "keepaliver.go",
        "mfa.go",
        "proxy.go",
        "sessions.go",
        "streamwatcher.go",
    ],
    importpath = "github.com/gravitational/teleport/api/client",
    visibility = ["//visibility:public"],
    deps = [
        "//api/breaker",
        "//api/client/accesslist",
        "//api/client/accessmonitoringrules",
        "//api/client/crownjewel",
        "//api/client/discoveryconfig",
        "//api/client/dynamicwindows",
        "//api/client/externalauditstorage",
        "//api/client/gitserver",
        "//api/client/kubewaitingcontainer",
        "//api/client/okta",
        "//api/client/proto",
        "//api/client/scim",
        "//api/client/secreport",
        "//api/client/statichostuser",
        "//api/client/userloginstate",
        "//api/client/usertask",
        "//api/client/webclient",
        "//api/constants",
        "//api/defaults",
        "//api/gen/proto/go/teleport/accesslist/v1:accesslist",
        "//api/gen/proto/go/teleport/accessmonitoringrules/v1:accessmonitoringrules",
        "//api/gen/proto/go/teleport/auditlog/v1:auditlog",
        "//api/gen/proto/go/teleport/autoupdate/v1:autoupdate",
        "//api/gen/proto/go/teleport/clusterconfig/v1:clusterconfig",
        "//api/gen/proto/go/teleport/crownjewel/v1:crownjewel",
        "//api/gen/proto/go/teleport/dbobject/v1:dbobject",
        "//api/gen/proto/go/teleport/dbobjectimportrule/v1:dbobjectimportrule",
        "//api/gen/proto/go/teleport/decision/v1alpha1",
        "//api/gen/proto/go/teleport/devicetrust/v1:devicetrust",
        "//api/gen/proto/go/teleport/discoveryconfig/v1:discoveryconfig",
        "//api/gen/proto/go/teleport/dynamicwindows/v1:dynamicwindows",
        "//api/gen/proto/go/teleport/externalauditstorage/v1:externalauditstorage",
        "//api/gen/proto/go/teleport/gitserver/v1:gitserver",
        "//api/gen/proto/go/teleport/healthcheckconfig/v1:healthcheckconfig",
        "//api/gen/proto/go/teleport/identitycenter/v1:identitycenter",
        "//api/gen/proto/go/teleport/integration/v1:integration",
        "//api/gen/proto/go/teleport/kube/v1:kube",
        "//api/gen/proto/go/teleport/kubewaitingcontainer/v1:kubewaitingcontainer",
        "//api/gen/proto/go/teleport/loginrule/v1:loginrule",
        "//api/gen/proto/go/teleport/machineid/v1:machineid",
        "//api/gen/proto/go/teleport/notifications/v1:notifications",
        "//api/gen/proto/go/teleport/okta/v1:okta",
        "//api/gen/proto/go/teleport/plugins/v1:plugins",
        "//api/gen/proto/go/teleport/presence/v1:presence",
        "//api/gen/proto/go/teleport/provisioning/v1:provisioning",
        "//api/gen/proto/go/teleport/recordingencryption/v1:recordingencryption",
        "//api/gen/proto/go/teleport/resourceusage/v1:resourceusage",
        "//api/gen/proto/go/teleport/samlidp/v1:samlidp",
        "//api/gen/proto/go/teleport/scopes/access/v1:access",
        "//api/gen/proto/go/teleport/secreports/v1:secreports",
        "//api/gen/proto/go/teleport/stableunixusers/v1:stableunixusers",
        "//api/gen/proto/go/teleport/trust/v1:trust",
        "//api/gen/proto/go/teleport/userloginstate/v1:userloginstate",
        "//api/gen/proto/go/teleport/userprovisioning/v2:userprovisioning",
        "//api/gen/proto/go/teleport/users/v1:users",
        "//api/gen/proto/go/teleport/usertasks/v1:usertasks",
        "//api/gen/proto/go/teleport/vnet/v1:vnet",
        "//api/gen/proto/go/teleport/workloadidentity/v1:workloadidentity",
        "//api/gen/proto/go/userpreferences/v1:userpreferences",
        "//api/identityfile",
        "//api/internalutils/stream",
        "//api/metadata",
        "//api/mfa",
        "//api/observability/tracing",
        "//api/observability/tracing/ssh",
        "//api/profile",
        "//api/types",
        "//api/types/accesslist",
        "//api/types/accesslist/convert/v1:convert",
        "//api/types/discoveryconfig",
        "//api/types/discoveryconfig/convert/v1:convert",
        "//api/types/events",
        "//api/types/secreports",
        "//api/types/secreports/convert/v1:convert",
        "//api/types/userloginstate",
        "//api/types/userloginstate/convert/v1:convert",
        "//api/types/wrappers",
        "//api/utils",
        "//api/utils/grpc/interceptors",
        "//api/utils/keys",
        "//api/utils/sshutils",
        "//api/utils/tlsutils",
        "@com_github_coreos_go_semver//semver",
        "@com_github_gobwas_ws//:ws",
        "@com_github_gravitational_trace//:trace",
        "@com_github_jonboulle_clockwork//:clockwork",
        "@io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc//:otelgrpc",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//connectivity",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//encoding/gzip",
        "@org_golang_google_grpc//keepalive",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_x_crypto//ssh",
        "@org_golang_x_net//http2",
        "@org_golang_x_net//proxy",
    ],
)

go_test(
    name = "client_test",
    srcs = [
        "alpn_conn_upgrade_test.go",
        "alpn_test.go",
        "apln_websocket_test.go",
        "client_test.go",
        "credentials_test.go",
        "doc_test.go",
        "events_test.go",
        "inventory_test.go",
        "joinservice_test.go",
        "mock_server_test.go",
    ],
    embed = [":client"],
    deps = [
        "//api",
        "//api/client/proto",
        "//api/constants",
        "//api/defaults",
        "//api/fixtures",
        "//api/identityfile",
        "//api/metadata",
        "//api/profile",
        "//api/testhelpers",
        "//api/testhelpers/mtls",
        "//api/trail",
        "//api/types",
        "//api/types/accesslist",
        "//api/types/accesslist/convert/v1:convert",
        "//api/types/header",
        "//api/utils/grpc/interceptors",
        "//api/utils/keys",
        "//api/utils/sshutils",
        "@com_github_gobwas_ws//:ws",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@com_github_gravitational_trace//:trace",
        "@com_github_jonboulle_clockwork//:clockwork",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//test/bufconn",
        "@org_golang_google_protobuf//proto",
        "@org_golang_x_crypto//ssh",
    ],
)
