load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "identityfile",
    srcs = ["identityfile.go"],
    importpath = "github.com/gravitational/teleport/api/identityfile",
    visibility = ["//visibility:public"],
    deps = [
        "//api/utils/keypaths",
        "//api/utils/keys",
        "//api/utils/sshutils",
        "@com_github_gravitational_trace//:trace",
        "@org_golang_x_crypto//ssh",
    ],
)

go_test(
    name = "identityfile_test",
    srcs = ["identityfile_test.go"],
    embed = [":identityfile"],
    deps = [
        "@com_github_stretchr_testify//require",
        "@org_golang_x_crypto//ssh",
    ],
)
