load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mfa",
    srcs = [
        "ceremony.go",
        "mfa.go",
        "prompt.go",
    ],
    importpath = "github.com/gravitational/teleport/api/mfa",
    visibility = ["//visibility:public"],
    deps = [
        "//api/client/proto",
        "//api/gen/proto/go/teleport/mfa/v1:mfa",
        "@com_github_gogo_protobuf//jsonpb",
        "@com_github_gravitational_trace//:trace",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//metadata",
    ],
)

go_test(
    name = "mfa_test",
    srcs = [
        "ceremony_test.go",
        "mfa_test.go",
    ],
    deps = [
        ":mfa",
        "//api/client/proto",
        "//api/gen/proto/go/teleport/mfa/v1:mfa",
        "//api/testhelpers/mtls",
        "//api/utils/grpc/interceptors",
        "@com_github_gravitational_trace//:trace",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
    ],
)
