load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "profile",
    srcs = ["profile.go"],
    importpath = "github.com/gravitational/teleport/api/profile",
    visibility = ["//visibility:public"],
    deps = [
        "//api/defaults",
        "//api/utils/keypaths",
        "//api/utils/keys",
        "//api/utils/keys/hardwarekey",
        "//api/utils/sshutils",
        "@com_github_gravitational_trace//:trace",
        "@in_gopkg_yaml_v2//:yaml_v2",
        "@org_golang_x_crypto//ssh",
    ],
)

go_test(
    name = "profile_test",
    srcs = ["profile_test.go"],
    deps = [
        ":profile",
        "//api/defaults",
        "@com_github_gravitational_trace//:trace",
        "@com_github_stretchr_testify//require",
    ],
)
