load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "testhelpers",
    srcs = ["proxy.go"],
    importpath = "github.com/gravitational/teleport/api/testhelpers",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gravitational_trace//:trace",
        "@com_github_stretchr_testify//require",
    ],
)
