load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "trail",
    srcs = ["trail.go"],
    importpath = "github.com/gravitational/teleport/api/trail",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gravitational_trace//:trace",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "trail_test",
    srcs = ["trail_test.go"],
    embed = [":trail"],
    deps = [
        "@com_github_gravitational_trace//:trace",
        "@com_github_stretchr_testify//assert",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
    ],
)
